--- a/HC128.Desktop/HC128.Desktop.csproj
+++ b/HC128.Desktop/HC128.Desktop.csproj
@@ -51,6 +51,8 @@
     <Compile Include="FrmHC128.Designer.cs">
       <DependentUpon>FrmHC128.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\ConvertImg.cs" />
+    <Compile Include="Models\ImgDTO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmHC128.resx">
